# portsmf

./: CMakeLists.txt  PortSMFConfig.cmake.in  README.txt  changelog.txt  conanfile.py  license.txt
.github/workflows/: build.yml
apps/: CMakeLists.txt  allegroconvert.cpp  allegroplay.cpp  seq2midi.cpp
doc/: CMakeLists.txt  Doxyfile.in
include/: allegro.h  mfmidi.h  strparse.h
packaging/: portSMF.pc.in
src/: algrd_internal.h  algsmfrd_internal.h  allegro.cpp  allegrord.cpp  allegroserial.cpp  allegrosmfrd.cpp  allegrosmfwr.cpp  allegrowr.cpp  mfmidi.cpp  strparse.cpp  trace.cpp
test/: CMakeLists.txt  test.cpp  test5.gro
